--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>RiverSurf</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>RiverSurf</title>
+    <meta name="description" content="RiverSurf • Plan, keep track and stay up to date at river surf events.">
+    <meta name="author" content="Alain Messerli, Igor Stojanovic, Marius Stalder, Raphael Gerber">
+    <meta name="keywords" content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon-180x180.png">
+    <meta name="apple-mobile-web-app-title" content="RiverSurf">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#3f51b5">
+    <link rel="alternate icon" type="image/png" href="assets/favicon/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#3f51b5">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <meta name="thumbnail" content="assets/favicon/thumb-150x150.png">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
