--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Alain Messerli, Igor Stojanovic, Marius Stalder, Raphael Gerber">
     <meta name="keywords" content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
