Google Maps Component implemented

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>RiverSurf</title>
-    <meta name="description" content="RiverSurf • Plan, keep track and stay up to date at river surf events.">
-    <meta name="author" content="Alain Messerli, Igor Stojanovic, Marius Stalder, Raphael Gerber">
-    <meta name="keywords" content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
-    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="description" content="RiverSurf • Plan, keep track and stay up to date at river surf events.">
+    <meta name="keywords" content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
+    <meta name="author" content="Alain Messerli, Igor Stojanovic, Marius Stalder, Raphael Gerber">
+    <base href="/">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFucdgC3HjB8WYMFC2A3T1xSMedzTtt-8"></script>
 
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon-180x180.png">
