--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>RiverSurf</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="description" content="RiverSurf • Plan, keep track and stay up to date at river surf events.">
-    <meta name="keywords" content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
+    <meta name="keywords"
+          content="river, surf, riversurf, fluss, surfen, flusssurfen, alain messerli, igor stojanovic, marius stalder, raphael gerber, bern university of applied science."/>
     <meta name="author" content="Alain Messerli, Igor Stojanovic, Marius Stalder, Raphael Gerber">
     <base href="/">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,16 +20,15 @@
     <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#3f51b5">
     <link rel="alternate icon" type="image/png" href="assets/favicon/favicon.png">
     <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg">
-    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#3f51b5">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <meta name="thumbnail" content="assets/favicon/thumb-150x150.png">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#1976d2">
 </head>
 <body>
 <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
