--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFucdgC3HjB8WYMFC2A3T1xSMedzTtt-8"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=<insert-google-maps-api-key-here>"></script>
 
     <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon-180x180.png">
